angular/kubernetes/manifest-prod.yaml
# Deployment for the stable version
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-prod-stable
  namespace: demo-namespace-prod
  labels:
    app: frontend
    version: stable
  annotations:
    autopilot.gke.io/warden-version: "2.8.81"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
      version: stable
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: frontend
        version: stable
    spec:
      automountServiceAccountToken: true
      containers:
      - name: frontend
        image: europe-west9-docker.pkg.dev/incubation-ids/demo-gke-repo/angular:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 250m
            ephemeral-storage: 1Gi
            memory: 512Mi
          requests:
            cpu: 250m
            ephemeral-storage: 1Gi
            memory: 512Mi
        securityContext:
          capabilities:
            drop:
              - NET_RAW
      enableServiceLinks: true
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      shareProcessNamespace: false
      tolerations:
        - effect: NoSchedule
          key: kubernetes.io/arch
          operator: Equal
          value: amd64

---
# Deployment for the canary version
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-prod-stable-canary
  namespace: demo-namespace-prod
  labels:
    app: frontend
    version: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      version: canary
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: frontend
        version: canary
    spec:
      automountServiceAccountToken: true
      containers:
      - name: frontend
        image: europe-west9-docker.pkg.dev/incubation-ids/demo-gke-repo/angular:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 250m
            ephemeral-storage: 1Gi
            memory: 512Mi
          requests:
            cpu: 250m
            ephemeral-storage: 1Gi
            memory: 512Mi
        securityContext:
          capabilities:
            drop:
              - NET_RAW
      enableServiceLinks: true
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      shareProcessNamespace: false
      tolerations:
        - effect: NoSchedule
          key: kubernetes.io/arch
          operator: Equal
          value: amd64

---
# Ingress to manage traffic routing
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: demo-namespace-prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
    nginx.ingress.kubernetes.io/set-misc: "step=canary"
spec:
  rules:
  - host: incubation-ids.page.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-prod-stable-canary
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-prod-stable
            port:
              number: 80
  backend:
    service:
      name: frontend-prod-stable
      port:
        number: 80
